# circle-of-confusion

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  example.html  main.py  pyproject.toml  pytest.ini  test_readme.py
.github/workflows/: release-plz.yaml  test.yaml
.woodpecker/: release_plz.yaml  release_py.yaml  test.yaml
java/: pom.xml
java/src/main/java/com/gillesvink/: Library.java
java/src/main/java/org/codeberg/gillesvink/: CircleOfConfusion.java
java/src/test/java/com/gillesvink/: LibraryTest.java
java/src/test/java/org/codeberg/gillesvink/: AppTest.java
python/src/circle_of_confusion/: __init__.py  _exception.py  _ffi.py
src/: calculator.rs  lib.rs  settings.rs
test/python/: test_calculations.py
wit/: circle-of-confusion.wit
