[package]
name = "circle-of-confusion"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "circle_of_confusion"
crate-type = ["cdylib"]

[features]
default = []
python-bindings = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.25.0", optional = true }
glam = { version = ">=0.30.8", default-features = false, features = ["libm"] }
libm = "0.2.11"
assert_approx_eq = "1.1.0"

[dev-dependencies]
rstest = "0.25.0"
