[package]
name = "circle-of-confusion"
version = "0.1.4"
edition = "2021"
license = "EUPL-1.2"
authors = ["Gilles Vink <gillesvink@noreply.codeberg.org>"]
description = "Calculator for Circle of Confusion (CoC) to calculate the size in pixels of an area, used for depth of field processing"
repository = "https://codeberg.org/gillesvink/circle-of-confusion"
documentation = "https://docs.rs/circle-of-confusion"
keywords = ["coc", "camera", "photography", "physically"]
categories = ["algorithms", "mathematics", "no-std", "no-std::no-alloc"]

[lib]
name = "circle_of_confusion"
crate-type = ["cdylib", "rlib", "staticlib"]


[features]
default = ["std", "wasm-bindings"]
std = []
wasm-bindings = ["dep:wasm-bindgen"]
python-bindings = ["dep:pyo3", "std"]

[dependencies]
libm = ">=0.2.11, < 0.3"
pyo3 = { version = ">=0.25.0, < 0.26", optional = true }
wasm-bindgen = { version = "0.2.105", optional = true }

[dev-dependencies]
rstest = "0.25.0"
assert_approx_eq = "1.1.0"
