[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "circle-of-confusion"
requires-python = ">=3.9"
classifiers = [
    'License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)',
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics",
]
dynamic = ["version"]
description = "Calculator for Circle of Confusion (CoC) to calculate the size in pixels of an area, used for depth of field processing."
readme = "README.md"
license = "EUPL-1.2"
authors = [{ name = "Gilles Vink", email = "gillesvink@noreply.codeberg.org" }]
maintainers = [
    { name = "Gilles Vink", email = "gillesvink@noreply.codeberg.org" },
]
dependencies = [
    "mypy>=1.18.2",
    "mypy-protobuf>=3.6.0",
    "wasmtime>=38.0.0",
]

[project.urls]
Homepage = "https://codeberg.org/gillesvink/circle-of-confusion"
"Bug Tracker" = "https://codeberg.org/gillesvink/circle-of-confusion/issues"
Changelog = "https://codeberg.org/gillesvink/circle-of-confusion/src/branch/main/CHANGELOG.md"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
    { file = "**/*.proto" },

]


[tool.hatch.version]
path = "version.txt"

[tool.hatch.build.targets.wheel]
packages = ["python/src/circle_of_confusion"]

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "build"
commands = [
    "uv pip install mypy-protobuf",
    "protoc --proto_path=./proto --python_out=./build circle_of_confusion.proto --mypy_out=./build",
    "cargo build --lib --release --target wasm32-unknown-unknown",
    "cp target/wasm32-unknown-unknown/release/circle_of_confusion.wasm ./build",
    "mv build/circle_of_confusion_pb2.pyi build/_circle_of_confusion_pb2.pyi",
    "mv build/circle_of_confusion_pb2.py build/_circle_of_confusion_pb2.py"

]
artifacts = [
    "circle_of_confusion.wasm",
    "_circle_of_confusion_pb2.py",
    "_circle_of_confusion_pb2.pyi",
]
clean_artifacts = "true"
clean_out_dir = "true"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = ["build"]

[dependency-groups]
dev = [
    "prettyprinter>=0.18.0",
    "pytest>=8.3.5",
 "pytest-readme>=1.0.2",
]
